--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -420,7 +420,7 @@ services:
     minio:
       build: ./minio
       volumes:
-        - ${DATA_PATH_HOST}/minio/data:/export
+        - minio:/export
         - ${DATA_PATH_HOST}/minio/config:/root/.minio
       ports:
         - "${MINIO_PORT}:9000"
@@ -1766,3 +1766,14 @@ services:
         - ${DATA_PATH_HOST}/tomcat/logs:/usr/local/tomcat/logs
       # restart: always
 
+### localstack ####################################################
+    localstack:
+      image: localstack/localstack-light
+      ports:
+        - 4566:4566
+      environment:
+        - SERVICES=sns
+        - DEFAULT_REGION=ap-northeast-1
+        - DEBUG=1
+      networks:
+        - backend
