--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,9 +25,9 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     - name: tag and push image to Amazon ECR
       env:
-        AWS_ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
+        IMAGE_TAG: ${{ github.sha }}
       run: |
-        IMAGE_TAG=$GITHUB_SHA
-        docker tag laradock_php-fpm:latest $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$IMAGE_TAG
-        docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$IMAGE_TAG
+        docker tag laradock_php-fpm:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
