--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Create .env
       run: cp env-example .env
     - name: Build base nginx Docker image
-      run: docker-compose build nginx
+      run: docker-compose build --no-cache nginx
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
